# Chatterfix

./: .claudeignore 2  .deployment-config  .dockerignore  .env 3.production  .env 3.template  .env 4.phase3  .env.example  .env.template  .firebaserc  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  AI-SETUP.md  AI_ASSISTANT_IMPLEMENTATION_COMPLETE.md  AI_LOOK 2.md  AI_LOOK.md  AI_LOOK_INDEX.md  AI_LOOK_QUICK_START.md  AI_LOOK_TECHNICAL_ADDENDUM.md  AI_STATE.yaml  ARCHITECTURE_CONSOLIDATION_PLAN.md  AUTONOMOUS_AI_SYSTEM_SUMMARY.md  Attached HTML and CSS Context  CHATGPT_INTEGRATION_GUIDE.md  CHATTERFIX_ARCHITECTURE_V2.md  CHATTERFIX_DNS_SETUP.md  CHATTERFIX_MASTER_PLAN.md  CLAUDE.md  CLAUDE_PROMPTS_NEXT.md  CLEANUP_REPORT 3.json  CLI-DEPLOYMENT.md  CODE_ARCHITECTURE_REVIEW.md  CODE_COMPLETENESS_ANALYSIS.md  COMPLETENESS_DASHBOARD.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  CUSTOM-DOMAIN.md  DATABASE_INIT_FIX.md  (+385 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml
ChatterFix_Consolidated/: Dockerfile  generate_mock_data.py  main.py  requirements.txt  test_ai_assistant.py  test_ai_search.py
ai/: README 2.md
ai-team-service/: Dockerfile  README.md  cloudbuild-ai-team.yaml  deploy-ai-team.sh  requirements.txt
ai_team/: ENHANCED_FRAMEWORK_SUMMARY.md  README.md  __init__.py  autogen_framework.py  collaboration_engine.py  dashboard_requirements.txt  deployment_team.py  grpc_client.py  grpc_server.py  knowledge_search.py  local_dashboard.py  memory_system.py  performance_optimizer.py  realtime_monitor.py  test_ai_teams.py  test_enhanced_framework.py  ultimate_memory_system.py  universal_ai_platform.py
app/: auth.py
backend/: Dockerfile  README 3.md  cmms_service.py  requirements 2.txt
chatterfix-enterprise-database/: 01_enterprise_schema.sql  02_analytics_views.sql  03_performance_indexes.sql
chatterfix-enterprise-deployment/: deployment-config.json
chatterfix-relay/: .gitignore  README.md  app.json  package.json  tailwind.config.js  tsconfig.json
complete-deployment/: deploy-to-vm.sh  enhanced_cmms_full_ai.py  work_orders_service.py
config/: __init__ 4.py  cloudsql_pooling_config 2.yaml  enterprise_middleware.py  env_loader.py
configuration/: .pre-commit-config.yaml  CLEANUP_REPORT.json  VALIDATION_REPORT 2.json  backend_security_architecture.json  database_analytics_architecture.json  enterprise_completion_summary.json  enterprise_plan_enterprise_cmms_20251019_175224.json  frontend_architecture_plan.json  predictive_intelligence_documentation.json
database/: enhanced_cmms_schema 2.sql
(+1338 files in other folders)
